# kusto-export-xlsx

./: .gitignore  main.py  main2.py  pyproject.toml  requirements.txt
