[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "ChewCW",email = "chwai87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-kusto-data (>=4.6.3,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["."]
venvPath = ".venv"
